change endpoints